# embedded-community

./: README.md
concepts/: Concepts.md
coroutines/: Coroutines.md
modules/: .clang-format  CMakeLists.txt  CMakePresets.json  Dockerfile  (+2 more)
modules/src/: CMakeLists.txt
modules/src/example1/: CMakeLists.txt
modules/src/example1/libbar/: CMakeLists.txt  libbar.cpp
modules/src/example1/libfoo/: CMakeLists.txt  libfoo1.cpp  libfoo2.cpp
modules/src/example1/main/: CMakeLists.txt  main.cpp
modules/src/example2/: CMakeLists.txt
modules/src/example2/header/: CMakeLists.txt
modules/src/example2/header/libheader/: CMakeLists.txt
modules/src/example2/header/libheader/include/: costlylib.h
modules/src/example2/header/libheader/src/: costlylib.cpp
modules/src/example2/header/main/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
modules/src/example2/module/: CMakeLists.txt
modules/src/example2/module/libmodule/: CMakeLists.txt  costlylib.cpp
modules/src/example2/module/main/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
modules/src/example3/: CMakeLists.txt
modules/src/example3/libOneModulePerFile/: CMakeLists.txt  factorial.cppm  fibonacci.cpp  fibonacci.cppm  someMath.cpp  someMath.cppm
modules/src/example3/main/: CMakeLists.txt  main.cpp
modules/src/example4/: CMakeLists.txt
modules/src/example4/libModuleWithPartitions/: CMakeLists.txt  bart.cppm  homer.cppm  libModuleWithPartitions.cppm  lisa.cppm  marge.cppm  person.cppm
modules/src/example4/main/: CMakeLists.txt  main.cpp
(+51 files in other folders)
